objects/SalesAgreementProduct.object
<CustomObject>
    <fields>
        <fullName>Shortfall_1__c</fullName>
        <description>Difference between planned and actuals</description>
        <formula>TotalPlannedQuantity  -  TotalActualQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between planned and actuals</inlineHelpText>
        <label>Shortfall_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Custom_X__c</fullName>
        <label>Total Custom X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customx__c</fullName>
        <label>Total Customx</label>
        <summarizedField>SalesAgreementProductSchedule.customx__c</summarizedField>
        <summaryForeignKey>SalesAgreementProductSchedule.SalesAgreementProductId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Short_Fall_N__c</fullName>
        <label>Total  Short Fall N</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>does_sa_exist__c</fullName>
        <description>used by the MFG Update MFG Cloud SA and Forecasts Process</description>
        <formula>IF(NOT(ISBLANK(SalesAgreementId)) &amp;&amp; ISBLANK(SalesAgreement.Id), FALSE, TRUE)</formula>
        <label>does sa exist?</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>